Added page skeleton and header

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!-- Create HTML format then style with CSS -->
-<script>
-  // on click output prompt for password criteria
-  // prompt user to input password length between 8 and 128
-  // if password is outside of required length output an error
-  // confirm if password can contain lowercase, uppercase, numeric, and/or special charactera
-  // once all criteria is entered generate and return a password to the page
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Password Generator</title>
+  </head>
+  <body>
+    <h1>Password Generator</h1>
+    <script>
+      // on click output prompt for password criteria
+      // prompt user to input password length between 8 and 128
+      // if password is outside of required length output an error
+      // confirm if password can contain lowercase, uppercase, numeric, and/or special charactera
+      // once all criteria is entered generate and return a password to the page
+    </script>
+  </body>
+</html>
