--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
   </head>
   <body>
     <h1>Password Generator</h1>
+    <div class="card text-center">
+      <div class="card-header">
+        Generate a password!
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">
+          With supporting text below as a natural lead-in to additional content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
     <script>
       // on click output prompt for password criteria
       // prompt user to input password length between 8 and 128
