--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         Generate a password!
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">
-          With supporting text below as a natural lead-in to additional content.
+          Click the button below to generate a secure password. You can set the
+          criteria to include uppercase, lowercase, numeric and special
+          characters. Give it a whirl!
         </p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
