--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@
   <body>
     <h1>Password Generator</h1>
     <div class="card text-center">
-      <div class="card-header">
-        Generate a password!
-      </div>
+      <div class="card-header"></div>
       <div class="card-body">
         <p class="card-text">
           Click the button below to generate a secure password. You can set the
-          criteria to include uppercase, lowercase, numeric and special
+          criteria to include uppercase, lowercase, numeric, and special
           characters. Give it a whirl!
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Generate</a>
       </div>
-      <div class="card-footer text-muted">
-        2 days ago
-      </div>
+      <div class="card-footer text-muted"></div>
     </div>
     <script>
       // on click output prompt for password criteria
