Added space for password

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
           criteria to include uppercase, lowercase, numeric, and special
           characters. Give it a whirl!
         </p>
+        <form>
+          <div class="form-group">
+            <input
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              
+            ></input>
+          </div>
+        </form>
         <a href="#" class="btn btn-primary">Generate</a>
       </div>
       <div class="card-footer text-muted"></div>
