--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     
-    
-    <section class="card text-center">
+    <section class= "container">
+    <section class="card text-center " id = "passGen">
       <header class="card-header">
           <h1>Password Generator</h1>
         </header>
@@ -36,9 +36,9 @@
         </form>
         <a href="#" class="btn btn-primary">Generate</a>
     </article>
-      <footer class="card-footer text-muted"></footer>
+      <footer class="card-footer text-muted">Hope this helps!</footer>
     </section>
-
+  </section>
     <script>
       // on click output prompt for password criteria
       // prompt user to input password length between 8 and 128
