styled page using css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     
     <section class= "container">
-    <section class="card text-center " id = "passGen">
-      <header class="card-header">
+    <section class="card text-center " >
+      <header class="card-header outer" >
           <h1>Password Generator</h1>
         </header>
       <article class="card-body">
@@ -34,9 +34,9 @@
             ></input>
           </article>
         </form>
-        <a href="#" class="btn btn-primary">Generate</a>
+        <a href="#" class="btn btn-primary" id="generate">Generate</a>
     </article>
-      <footer class="card-footer text-muted">Hope this helps!</footer>
+      <footer class="card-footer  outer" >Hope this helps!</footer>
     </section>
   </section>
     <script>
