Fixed prompt for password length

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       function passPrompt(){
         alert("Please select the criteria for your password.");
         // prompt user to input password length between 8 and 128
-        const passLen = prompt("Choose a password length between 8 and 128 characters.")
+        const passLen = prompt("Please choose a password length between 8 and 128 characters.")
         // const upper = confirm("Would you like to include uppercase letters?");
         // const lower = confirm()
       }
