added uppercase confirm

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         alert("Please select the criteria for your password.");
         // prompt user to input password length between 8 and 128
         const passLen = prompt("Please choose a password length between 8 and 128 characters.")
-        // const upper = confirm("Would you like to include uppercase letters?");
+        // confirm if password can contain lowercase, uppercase, numeric, and/or special characters
+        const upper = confirm("Would you like to include uppercase letters?");
         // const lower = confirm()
       }
       
       // if password is outside of required length output an error
-      // confirm if password can contain lowercase, uppercase, numeric, and/or special charactera
       // once all criteria is entered generate and return a password to the page
     </script>
   </body>
