added numeric confirm

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         // confirm if password can contain lowercase, uppercase, numeric, and/or special characters
         var upper = confirm("Would you like to include uppercase letters?");
         var lower = confirm("Would you like to include lowercase letters?");
+        var numer = confirm("Would you like to include numeric values?");
       }
       
       // if password is outside of required length output an error
