added special character confirm

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         var upper = confirm("Would you like to include uppercase letters?");
         var lower = confirm("Would you like to include lowercase letters?");
         var numer = confirm("Would you like to include numeric values?");
+        var spec = confirm("Would you like to include special characters?");
       }
       
       // if password is outside of required length output an error
