--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Password Generator</title>
   </head>
   <body>
@@ -40,6 +40,6 @@
         <footer class="card-footer outer">Hope this helps!</footer>
       </section>
     </section>
-    <script src="./generator.js"></script>
+    <script src="./assets/js/generator.js"></script>
   </body>
 </html>
