updated variables and changed finalPass to a string

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               ></textarea>
             </article>
           </form>
-          <button onclick="passPrompt()" class="btn btn-primary" id="generate">
+          <button class="btn btn-primary" id="generate">
             Generate
           </button>
         </article>
